--- a/BlazorServerApp/appsettings.json
+++ b/BlazorServerApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ApiClientOptions": {
-    "TiempoMaximoEsperaEnSegundos": 60,
+    "TimeoutInSeconds": 60,
     "BaseUrl": "https://localhost:7225"
   },
   "Logging": {
